dark mode shadow opacity fix

--- a/assets/css/business.css
+++ b/assets/css/business.css
@@ -77,9 +77,9 @@ main {
 }
 
 .businessPost:hover.dark {
-    box-shadow: 5px 8px 16px 3px rgba(255, 255, 255, 0.63);
-    -webkit-box-shadow: 5px 8px 16px 3px rgba(255, 255, 255, 0.63);
-    -moz-box-shadow: 5px 8px 16px 3px rgba(255, 255, 255, 0.63);
+    box-shadow: 5px 8px 16px 3px rgba(255, 255, 255, 0.13);
+    -webkit-box-shadow: 5px 8px 16px 3px rgba(255, 255, 255, 0.13);
+    -moz-box-shadow: 5px 8px 16px 3px rgba(255, 255, 255, 0.13);
 }
 
 .businessInnerContainer {
